# Search-Engine-in-Cpp-With-Custom-HashMap-Implementation

./: CMakeLists.txt  DSAVLTree.h  DSHashTable.h  DSMap.h  Document.cpp  Document.h  DocumentParser.cpp  DocumentParser.h  Project_Instructions.docx  QueryProcessor.cpp  QueryProcessor.h  README.md  database.cpp  database.h  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  rapidJSONExample.cpp  test.cpp
sample_data/coll_1/: news_0064567.json  news_0064568.json  news_0064569.json
sample_data/coll_2/: news_0064570.json  news_0064571.json  news_0064572.json
